test/kubernetes-Mumshad-Mannambeth/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
    type: frontend
spec:
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
        type: frontend
    spec:
      containers:
      - name: nginx-container
        image: kodekloud/webapp-color:v1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
  replicas: 3
  selector:
    matchLabels:
      app: nginx

# echo 'eval "$(/opt/homebrew/bin/brew shellenv)"' >> /Users/amitta/.zprofile
