test/kubernetes-Mumshad-Mannambeth/namespace.yml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: dev
  labels:
    name: myapp
spec:
  containers:
  - name: nginx-container
    image: nginx
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
