test/kubernetes-Mumshad-Mannambeth/pod-configmap-envFrom.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-color
  namespace: default
  labels:
    app: webapp-color
spec:
  containers:
  - name: webapp-color
    image: kodekloud/webapp-color
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    envFrom:
      - configMapRef:
          name: webapp-config-map
    ports:
      - containerPort: 8080
