test/kubernetes-Mumshad-Mannambeth/pod-secret-data-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webapp-color
  namespace: default
  labels:
    app: webapp-color
spec:
  containers:
  - name: webapp-color
    image: kodekloud/webapp-color
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
      - containerPort: 8080  
    volumeMounts:
      - name: app-secret-volume
        mountPath: "/opt/app-secret-volumes"
  volumes:
    - name: app-secret-volume
      secret:
        secretName: app-secret
