test/kubernetes-Mumshad-Mannambeth/pod-with-node-affinity.yaml
apiVersion: v1
kind: Pod
metadata:
  name: "MYAPP"
  namespace: default
  labels:
    app: "MYAPP"
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                  - Large
                  - Medium
                  
    # requiredDuringSchedulingIgnoredDuringExecution:
    #   nodeSelectorTerms:
    #     - matchExpressions:
    #         - key: topology.kubernetes.io/zone
    #           operator: NotIn
    #           values:
    #             - Small
    # requiredDuringSchedulingIgnoredDuringExecution:
    #   nodeSelectorTerms:
    #     - matchExpressions:
    #         - key: topology.kubernetes.io/zone
    #           operator: Exists

      preferredDuringSchedulingIgnoredDuringExecution:
        - weight: 1
          preference:
            matchExpressions:
              - key: another-node-label-key
                operator: In
                values:
                  - another-node-label-value
  containers:
    - name: MYAPP
      image: "debian-slim:latest"
      resources:
        limits:
          cpu: 200m
          memory: 500Mi
        requests:
          cpu: 100m
          memory: 200Mi
      env:
      - name: DB_HOST
        valueFrom:
          configMapKeyRef:
            name: MYAPP
            key: DB_HOST
      ports:
      - containerPort:  80
        name:  http
      volumeMounts:
      - name: localtime
        mountPath: /etc/localtime
  volumes:
    - name: localtime
      hostPath:
        path: /usr/share/zoneinfo/Asia/Shanghai
  restartPolicy: Always
        
# Not In The label value is not contained in the supplied set of strings
# Exists A label with this key exists on the object
