test/kubernetes-Mumshad-Mannambeth/service-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: deployment-service
  namespace: default
spec:
  selector:
    app: nginx
  type: NodePort
  ports:
  - name: 80-tcp
    protocol: TCP
    port: 8080
    targetPort: 8080
    nodePort: 30020
