test/kubernetes-Mumshad-Mannambeth/service-frontend.yml
# Services NodePort
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: NodePort
  selector:
    app: myapp
    type: frontend
  ports:
  - port: 80        # Port of Service Maps with Cluster IP of Service
    targetPort: 80  # Target Pod Port
    nodePort: 30008  # Used to Access Web Server Externally Range From 30000-32767
